--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,18 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>React App</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+
+  <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/animation.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/animation.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/mobile.css" media="(max-width:600px)" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
